# IndusMind

./: .env  .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  pre-commit-config.yaml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py  constants.py  exceptions.py  lifespan.py  logging.py  middleware.py  security.py
backend/app/db/: database_manager.py
backend/app/db/neo4j/: client.py
backend/app/db/postgres/: base.py  engine.py  health.py  session.py
backend/app/db/qdrant/: client.py
backend/app/db/redis/: client.py
backend/app/dependencies/: common.py  config.py  logger.py  neo4j.py  postgres.py  qdrant.py
backend/app/repositories/: base.py
backend/tests/: conftest.py  test_health.py
docs/: sprint_1.md
