[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Project Metadata
# =============================================================================

[project]
name = "industrial-knowledge-intelligence-platform"
version = "1.0.0"
description = "AI-Powered Industrial Knowledge Intelligence Platform"
requires-python = ">=3.12"

# =============================================================================
# Black
# =============================================================================

[tool.black]
line-length = 88
target-version = ["py312"]

# =============================================================================
# Ruff
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy
# =============================================================================

[tool.mypy]
python_version = "3.12"

strict = true

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true

no_implicit_optional = true

pretty = true

plugins = [
    "pydantic.mypy",
]

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

testpaths = [
    "tests",
]

asyncio_mode = "auto"

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
branch = true

source = [
    "app",
]

[tool.coverage.report]
show_missing = true
skip_covered = false